--- a/templates/index.html
+++ b/templates/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <div class="main-content">
+    <div class="index-main-content">
         <div class="content-container">
         <h1>Explore England Blog - Weather Portal</h1>
         <p>Select a location to view the current weather data:</p>
